style.css
body{
    margin: 0;
}

.navigation{
    display: flex;
    background-color: #0C5CA7;
    min-height: 70px;
}
.inner-navigation{
    font-family: 'Effra-Regular',Arial;
    box-sizing: border-box;
    font-size: 18px;
    font-weight: 400;
    max-width: 78%;
    height: 100%;
}
.navbar-nav-items{
    height: 100%;
    color: white;
}
.navbar-nav{
    margin-left: 5px;
    margin-right: 5px;
    height: 100%;
    align-items: center;
    display: flex;
    justify-content: center;
}
.navbar-nav span{
    color: white;
    margin: 10px;
}
.navbar-search-icon{
    margin-right: 20px;
}
.navbar-nav-sp{
    margin-left: 23px;
    height: 100%;
}
@media (max-width:1200px){
    .navbar-brand{
        position: absolute;
        left: 51%;
        transform: translateX(-50%);
        top: 0;
    }
    .navigation{
        min-height: 50.2px;
    }
    .inner-navigation{
        min-width: 100%;
    }
    .navbar-search-icon{
        top: 0;
        margin-top: 7px;
    }
}

@media(width<750px){
    .wide-screen-swiper{
        display: none;
    }
    .short-screen-swiper{
        display: block;
    }
}
@media (width>=750px){
    .short-screen-swiper{
        display: none;
    }
    .wide-screen-swiper{
        display: block;
    }
    
}
.falgshipheader{
    font-family: 'Effra-Regular',Arial;
    font-size: 70px;
    font-weight: 700;
    text-align: center;
}




.product-details{
    padding-bottom: 50px;
    background-color: #edf0f3;
}
.product-image-header{
    font-family: 'Effra-Bold'Arial;
    font-size: 25.24px;
    font-weight: 700;
    text-align: center;
}
.product-image-divider-line{
    height: 1px;
    width: 110px;
    border-bottom: 3px solid #0C5CA7;
    margin: 20px;
}
.product-image-discription{
    font-family: 'Effra-Bold'Arial;
    font-size: 18px;
    color: #555555;
    text-align: center;
}
.product-image-button-div{
    position: absolute;
    width: 160px;
    height: 42px;
    border-radius: 22px;
    outline-color: #0C5CA7;
    outline: 1px solid #0C5CA7;
    text-align: center;
    display:flex;
    align-items: center;
    font-family: 'Effra-Regular',Arial;
    font-size: 20px;
    font-weight: 400;
    cursor: pointer;
}
.product-image-button-div:hover{
    box-shadow: 0px 10px 10px #d5d5d5;
}
@media (width>=768px){
    .product-image-header{
        font-family: 'Effra-Bold'Arial;
        font-size: 20.24px;
        font-weight: 500;
        text-align: center;
    }
    .product-image-discription{
        font-family: 'Effra-Bold'Arial;
        font-size: 14px;
        font-weight: 450;
        color: #555555;
        text-align: center;
    }
}
@media (width<768px){
    .product-image-button-div{
        display: none;
    }
    .product-details{
        padding-bottom: 0px;
        background-color: #edf0f3;
    }
}
.heading-expansion{
    text-overflow:ellipsis ;
    overflow: hidden;
    display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   cursor: pointer;
}
.discription-expansion{
    text-overflow: ellipsis;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient:vertical;
    cursor: pointer;
    font-size: 12px;
    font-family: 'Effra-Bold'Arial;
}
@media (width<768px){
    .discription-expansion{
        font-size: 17px;
    }
}
.date-with-year{
    color: #0C5CA7;
    font-weight: 500;
    position: relative;
}
.date-with-year div{
    cursor: pointer;
}
.attentive-header{
    text-align: center;
    font-size: 80px;
    font-weight: 700;
    font-family: 'Effra-Bold'Arial;
    line-height: initial;
}
.service-image-1{
    left: 0;
    z-index: 1;
    width: 55%;
    margin-bottom: 50px;
}
.service-image-2{
    right: 0;
    width: 55%;
    padding-bottom: 50px;
    bottom: 0;
}
.service-image-1 img,.service-image-2 img{
    width: 100%;
}
.service-image-2:hover{
    z-index: 2;
}
.service-images{
    height: 700px;
    position: relative;
}
@media (width<1200px){
    .service-images{
        height: 600px;
        position: relative;
    }
}
@media (width<1000px){
    .service-images{
        height: 500px;
        position: relative;
    }
}
@media (width<800px){
    .service-images{
        height: 400px;
        position: relative;
    }
}

@media (width<600px){
    .service-images{
        height: 300px;
        position: relative;
    }
}
footer{
    margin-top: 100px;
    background-color: #0C5CA7;
}
.footer-items{
    height: 50px;
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.footer-items a{
    text-decoration: none;
    color: white;
    width: fit-content;
    font-family: 'Effra-Regular',Arial;
    font-size: 18px;
    font-weight: 400;

}
.footer-items i{
    color: white;
    width: fit-content;
}
.footer-social-and-language{
    height: 100px;
}
.social-icons{
    position: relative;
}
.social-icons a{
    position: relative;
    height: fit-content;
    width: fit-content;
    bottom: 0;
}
a:hover{
    text-decoration: underline;
}
.copyright{
    width: fit-content;
    height: 50px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: rgb(156, 156, 156);
    font-size: 13px;
}
.other-links{
    width: 100%;
}
.other-links a{
    font-family: 'Effra-Regular',Arial;
    font-size: 12px;
    font-weight: 400;
}
.devider-other-links{
    padding-left: 5px;
    padding-right: 5px;
}
.footer-items-divider{
    height: 0.5px;
    width: 100%;
    border-bottom: 0.5px solid rgb(107, 107, 107);
}

